# sapthame

./: CLI_USAGE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  SAPTAMI_ARCHITECTURE.md  example.py  main.py  pyproject.toml
agents/: market-intel-agent.get-info.json  market-opportunity-agent.get-info.json  protocol-orchestrator.get-info.json  traction-metrics-agent.get-info.json
docs/: BINDU_CLIENT.md  LLM_CLIENT_USAGE.md
misc/: log_setup.py
plans/: 2025-08-01_sepsis_v2.md  EXECUTOR_REDESIGN_SUMMARY.md  turn_executor_architecture.md  turn_executor_implementation_guide.md  turn_vs_phase_comparison.md
saptha/: __init__.py  config.py
saptha/context/: manager.py  models.py
saptha/core/: orchestrator.py  types.py
saptha/protocol/: a2a_client.py
saptha/routing/: router.py
sapthame/: __init__.py  __main__.py  cli.py  settings.py
sapthame/agents/: orchestrator_agent.py
sapthame/common/: models.py
sapthame/discovery/: agent_registry.py
sapthame/execution/: phase_executor.py
sapthame/orchestrator/: __init__.py  conductor.py  state.py
sapthame/phases/: base_phase.py  implementation_phase.py  planning_phase.py  research_phase.py
sapthame/protocol/: __init__.py  a2a_client.py  bindu_client.py  state_manager.py
sapthame/system_msgs/: implementation_prompt.md  research_prompt.md  research_stage_prompt.md
sapthame/utils/: __init__.py  cli_utils.py  config.py  llm_client.py  logging.py  prompt_loader.py  stage_executor.py
src/discovery/: agent_registry.py
src/execution/: phase_executor.py
tests/: test_saptami_basic.py
(+34 files in other folders)
